bet routes
