# structs/structs.go
@@ -21,14 +21,16 @@ type Team struct {
 
 // Structure that represents a player
 type Player struct {
-	ID       int       `json:"id"`
-	Name     string    `json:"name"`
-	City     string    `json:"city"`
-	Country  string    `json:"country"`
-	Birth    time.Time `json:"birth"`
-	IdTeam   int       `json:"idteam"`
-	Height   float64   `json:"height"`
-	Position string    `json:"position"`
+	ID          int       `json:"id"`
+	Name        string    `json:"name"`
+	City        string    `json:"city"`
+	Country     string    `json:"country"`
+	Birth       time.Time `json:"birth"`
+	IdTeam      int       `json:"idteam"`
+	Height      string    `json:"height"`
+	Position    string    `json:"position"`
+	ImagePath   string    `json:"imagepath"`
+	ShirtNumber int       `json:"shirtnumber"`
 }
 
 type Live struct {
